--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,367 @@
-/*:root {
-    color: ;
-    font-family: ;
-    fon-size: ;
+:root {
+    --color-primary: #08A6E4;
+    --color-primary-shadow: rgba(7, 172, 230, .16);
+    --color-redish: #FB3B64;
+    --color-green: #55DFB4;
+    --color-black: #000000;
+    --color-grey: #A5A5A5;
+    --color-light-grey: #F7F7F7;
+    --color-white: #FFFFFF;
+    --font-raleway: "Raleway", sans-serif;
+    --font-open-sans: "Open Sans", sans-serif;
+}
+* {
+    box-sizing: border-box;
+}
+body {
+    font-family: 'Open Sans', sans-serif;
+}
+a {
+    text-decoration: none;
+}
+
+.container {
+    width: 1352px;
+    margin: 0 auto;
+}
+
+.header {
+    height: 70px;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
+}
+
+.header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+}
+
+.header-nav {
+    display: flex;
+}
+
+.nav-element {
+    padding: 0 26px;
+}
+
+.nav-element:last-child {
+    padding-right: 0;
+}
+
+.nav-link {
+    color: var(--color-grey);
+    font-weight: 700;
+    font-size: 16px;
+    text-transform: uppercase;
+    padding: 28px 18px 22px;
+    border-bottom: 4px solid transparent;
+}
+
+.nav-link:hover {
+    color: var(--color-black);
+    border-color: var(--color-primary);
+}
+
+.logo {
+    font-size: 32px;
+    font-family: var(--font-raleway);
+    font-weight: 300;
+    color: var(--color-primary);
 
 }
- */
+.opening {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.opening-content {
+    margin-top: 130px;
+    text-align: center;
+}
+
+.opening-header {
+    font-family: var(--font-raleway);
+    font-size: 49px;
+}
+
+.opening-heading {
+    margin-top: 20px;
+    margin-bottom: 38px;
+}
+
+.opening-image {
+    width: 100%;
+    height: auto;
+}
+
+.button-large {
+    display: inline-block;
+    align-content: center;
+    justify-content: center;
+    width: 440px;
+    height: 67px;
+    background-color: var(--color-primary);
+    border-radius: 40px;
+    box-shadow: 5px 10px 14px rgba(7, 172, 230, 0.16);
+    color: white;
+    padding: 22px 155px;
+}
+
+
+.statistics {
+    margin-top: 100px;
+}
+.statistics-title {
+    font-family: var(--font-raleway);
+    font-weight: 400;
+    font-size: 36px;
+    text-align: center;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+.statistics-container {
+    display: flex;
+    height: 531px;
+    max-width: 800px;
+    margin: 100px auto 120px;
+    justify-content: space-between;
+}
+.statistics-single {
+    max-width: 160px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    text-align: center;
+    font-family: var(--font-raleway);
+}
+.statistics-circle {
+    width: 63px;
+    height: 63px;
+    border-radius: 50%;
+    position: relative;
+}
+.statistics-img {
+    position: absolute;
+}
+.statistics-single:nth-child(1) .statistics-circle {
+    background-color: var(--color-redish);
+}
+.statistics-single:nth-child(1) .statistics-img {
+    top: 0;
+    left: 45%;
+}
+
+.statistics-single:nth-child(2) .statistics-circle {
+    background-color: var(--color-primary);
+}
+.statistics-single:nth-child(2) .statistics-img {
+    top: 12px;
+    left: 47%;
+}
+
+.statistics-single:nth-child(3) .statistics-circle {
+    background-color: var(--color-green);
+}
+.statistics-single:nth-child(3) .statistics-img {
+    top: 0;
+    left: 50%;
+}
+
+.statistics-number {
+    font-family: var(--font-raleway);
+    font-weight:800;
+    font-size:20px;
+    margin: 14px  auto 19px;
+
+}
+.statistics-description {
+    font-family: var(--font-raleway);
+    font-weight:400;
+    font-size: 17px;
+    color: var(--color-grey);
+}
+
+
+
+.article {
+    margin-top: 105px;
+    margin-bottom: 105px;
+}
+.article-container {
+    height: 1184px;
+    display:flex;
+}
+
+.article-title {
+    font-family: var(--font-raleway);
+    font-weight: 400;
+    font-size: 36px;
+    text-align: center;
+    margin-top: 91px;
+    margin-bottom: 30px;
+}
+.article-description {
+    font-family: var(--font-open-sans);
+    font-weight: 400;
+    font-size: 16px;
+    text-align: center;
+    margin-top: 30px;
+    margin-bottom: 50px;
+}
+.article-single {
+    max-width: 160px;
+    display: inline-block;;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    text-align: center;
+
+}
+.article-image1 {
+    height: 219px;
+    width: 386px;
+}
+.article-image2 {
+    height: 328px;
+    width: 426px;
+}
+.article-image3 {
+    height: 207px;
+    width: 295px;
+}
+
+.benefits {
+    padding: 100px 0;
+    background-color: var(--color-light-grey);
+}
+
+.benefits__container {
+    padding: 0 100px;
+}
+
+.benefits__single {
+    background-color: var(--color-white);
+    border: 1px solid #E8E9ED;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    margin-bottom: 37px;
+    border-radius: 5px;
+}
+
+.benefits__text {
+    max-width: 415px;
+    margin: 90px 36px;
+}
+
+.benefits__text::after {
+    content: "";
+    width: 332px;
+    height: 4px;
+    background-color: var(--accent-color);
+    display: block;
+    margin-top: 50px;
+}
+
+.benefits__description {
+    margin-top: 30px;
+    line-height: 1.375rem;
+}
+
+.benefits__image {
+    position: relative;
+}
+
+.benefits__image img {
+    position: relative;
+    z-index: 2;
+}
+
+.benefits__single--notebook {
+    --accent-color: var(--color-redish);
+}
+
+.benefits__single--notebook .benefits__image {
+    margin-right: 117px;
+    margin-bottom: 38px;
+}
+
+.benefits__single--notebook .benefits__image::before {
+    content: "";
+    width: 180px;
+    height: 180px;
+    background-color: var(--accent-color);
+    display: block;
+    border-radius: 40px;
+    position: absolute;
+    right: 0;
+    top: -40px;
+    transform: rotate(45deg);
+}
+
+.benefits__single--notebook .benefits__image img {
+    width: 386px;
+    height: auto;
+}
+
+.benefits__single--phone {
+    --accent-color: var(--color-primary);
+    flex-direction: row-reverse;
+    padding: 0 20px 0 70px;
+}
+
+.benefits__single--phone .benefits__image::before {
+    content: "";
+    width: 320px;
+    height: 320px;
+    background-color: var(--accent-color);
+    display: block;
+    border-radius: 50%;
+    position: absolute;
+    left: 0;
+    top: -20px;
+}
+
+.benefits__single--phone .benefits__image img {
+    width: 426px;
+    height: auto;
+}
+
+.benefits__single--phone .benefits__text {
+    margin: 70px 0;
+}
+.benefits__double {
+    --accent-color: var(--color-green);
+    display: flex;
+}
+
+.benefits__double > div {
+    margin-bottom: 0;
+}
+.benefits__single--solo {
+    max-width: 620px;
+}
+
+.benefits__single--solo .benefits__text {
+    max-width: none;
+    margin: 70px 35px;
+}
+
+.benefits__single--image {
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--accent-color);
+    border: none;
+    margin-left: 60px;
+}
+
+.benefits__single--image img {
+    width: 295px;
+    height: auto;
+    margin-top: 55px;
+}
